# enum_helper

./: .gitignore  Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: lib.rs  simple_serde.rs  utils.rs
macros/src/compare_str/: mod.rs
macros/src/enum_of_keys_impl/: attrs.rs  mod.rs  variant.rs
src/: enum_of_keys.rs  lib.rs
tests/: compare_str.rs  enum_of_keys.rs  general_test.rs  simple_serde.rs
