[package]
name = "enum_helper"
version = "0.1.0"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
description = "More Enum Derives"
keywords = ["enum", "macros"]
edition = "2021"


[dependencies]
enum_helpers_macros = { path = "macros", optional = true }

[dev-dependencies]
strum = { version = "0.25",features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
[features]
default = ["derive"]
derive = ["enum_helpers_macros"]