[package]
name = "enum_helpers_macros"
version = "0.0.0"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
strum = { version = "0.25", features = ["derive"] }
[features]
enum_debug =[]