[package]
name = "enum_helpers_macros"
version = "0.1.0"
authors = ["Wyatt Herkamp <wherkamp@gmail.com>"]
description = "Macros for enum_helpers"
keywords = ["enum"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }
